--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "lui": "https://github.com/l3p3/lui"
   },
   "devDependencies": {
+    "path-browserify": "^1.0.1",
     "ts-loader": "^8.0.12",
     "typescript": "^4.1.3",
     "webpack": "^5.11.1",
-    "webpack-cli": "^4.3.0"
+    "webpack-cli": "^4.3.0",
+    "webpack-node-externals": "^2.5.2"
   }
 }
